# Apex_v2

./: chatkit-js-readme.md  openai-agents-pypi.json  openai-chatkit-pypi.json  openai_agents-0.6.1-py3-none-any.whl
.github/: FUNDING.yml  README.md  copilot-instructions.md  dependabot.yml  frontend-copilot-instructions.md  instructions.md  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: add-to-project.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  generate-client.yml  issue-manager.yml  labeler.yml  latest-changes.yml  lint-backend.yml  playwright.yml  smokeshow.yml  test-backend.yml  test-docker-compose.yml
Project_Apex/: .env.example  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  railpack.json  start.sh
Project_Apex/.github/: README.md  copilot-instructions.md  frontend-copilot-instructions.md  instructions.md
Project_Apex/.github/workflows/: deploy.yml  generate-client.yml  playwright.yml
Project_Apex/backend/: .gitignore  Dockerfile  README.md  add_long_term_balance.py  pyproject.toml  verify_url_fixes.py
Project_Apex/backend/app/: crud.py  main.py  models.py  tests_pre_start.py  utils.py
Project_Apex/backend/app/alembic/: env.py
Project_Apex/backend/app/api/: deps.py  main.py
Project_Apex/backend/app/core/: config.py  db.py  file_storage_config.py  logging_config.py  metrics.py  rate_limiter.py  security.py  time.py
Project_Apex/backend/app/services/: balance_reset.py  coingecko.py  email_sender.py  execution_events.py  file_storage.py  long_term.py  long_term_worker.py  notification_service.py  roi_calculator.py  scheduler.py  trader_simulator.py  trading_simulator.py  transactions.py  user_progression.py
Project_Apex/backend/app/tests/: conftest.py
Project_Apex/docs/: Apex_deployment_HYBRID.md  Deployment_Guide_for_Beginners.md  KYC_FILE_UPLOAD_AUDIT.md  KYC_FILE_UPLOAD_FIXES.md  KYC_FILE_UPLOAD_IMPLEMENTATION.md  README_KYC_FIX.md  architecture.md  development.md
Project_Apex/docs/development/: ADMIN_DASHBOARD_AUDIT_SUMMARY.md
Project_Apex/frontend/: .gitignore  .prettierrc  README.md  chatkit-react-1.3.0.tgz  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  verify_frontend_urls.js  vite.config.ts  vitest.config.ts
Project_Apex/frontend/.git_disabled/: COMMIT_EDITMSG  index
Project_Apex/frontend/package/: README.md  package.json
Project_Apex/frontend/scripts/: generate-client.sh
Project_Apex/frontend/src/: main.tsx  routeTree.gen.ts  router.tsx  theme.d.ts
Project_Apex/frontend/src/__tests__/: copy-trading.test.tsx
Project_Apex/frontend/src/api/: client-config.ts  index.ts
Project_Apex/frontend/src/components/: AppIcon.tsx  TradingViewWidget.jsx  trading-view-widget.tsx
Project_Apex/hooks/: post_gen_project.py
Project_Apex/scripts/: cleanup-workspace.sh
docs/: ai-customer-service-assistant-guide.md  ci-cd-cheatsheet.md  openai-agents-deepseek-integration.md  project-handoff.yml
openai_agents-0.6.1.dist-info/: RECORD
openai_chatkit-1.4.0/: PKG-INFO  README.md  pyproject.toml
openai_chatkit-1.4.0/chatkit/: actions.py  agents.py  errors.py  icons.py  logger.py  server.py  store.py  types.py  version.py  widgets.py
openai_chatkit-1.4.0/openai_chatkit.egg-info/: SOURCES.txt  requires.txt  top_level.txt
openai_chatkit-1.4.0/tests/: test_agents.py  test_chatkit_server.py  test_icons.py  test_store.py  test_widgets.py
(+684 files in other folders)
